--- a/DVLD.Client/src/index.css
+++ b/DVLD.Client/src/index.css
@@ -7,3 +7,9 @@
         @apply  bg-blue-500
     }
 }
+
+@layer utilities {
+    .clip-circle {
+        clip-path:  circle(50% at 50% 50%);
+    }
+}
