Added Default Values For Edit Person Schema

--- a/DVLD.Client/src/css/App.css
+++ b/DVLD.Client/src/css/App.css
@@ -10,6 +10,9 @@ body,
   min-height: 100vh;
 }
 
+input[disabled]:hover {
+  cursor: not-allowed;
+}
 * {
   scrollbar-width: thin;
   scrollbar-color: #3b82f6 #ffffff;
